完成登录登出功能

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:8090/zen_data
+url=jdbc:mysql://rm-wz9zb112m54a82292o.mysql.rds.aliyuncs.com:3306/zen_data
 username=root
-password=txkj123456
+password=@root_123
 #定义初始连接数
 initialSize=0
 #定义最大连接数
